src/objects/Customer_Story__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Stories</relationshipLabel>
        <relationshipName>Customer_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Stories</relationshipLabel>
        <relationshipName>Customer_Stories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Customer Story</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Customer Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>